# SoftTissue

./: .gitignore  _skipped.face  materials.json  plan.md  preview_deformed.vtk  preview_deformed_from_tet_p4.vtk  preview_deformed_from_tet_p6.vtk  preview_deformed_from_tet_p6_dyn.vtk  preview_deformed_from_tet_p6_dyn_fixymax.vtk  preview_deformed_from_tet_p6_dyn_move.vtk  preview_deformed_from_tet_p6_dyn_soft.vtk  preview_deformed_from_tet_p6_dyn_stable.vtk  preview_deformed_from_tet_p6_dyn_stable_ymax_E50k.vtk  preview_deformed_from_tet_p6_dyn_stable_ymin.vtk  preview_deformed_from_tet_p6_dyn_stable_ymin_E50k.vtk  preview_deformed_from_tet_p6_dyn_units.vtk  preview_deformed_from_tet_p6_dyn_units_stable.vtk  preview_deformed_from_tet_p6_dyn_units_stable_soft.vtk  preview_deformed_from_tet_p6_implicit.vtk  preview_deformed_from_tet_p6_quasi_long.vtk  sim.md
configs/: materials_sa_mri_pruned_debug_soft.json  materials_sa_mri_pruned_debug_softer.json  preview_fem_all_params_template_with_comments.json  preview_gm_ct_p6_rt_slab_fix_colors_preview_only.json  preview_gm_ct_p6_rt_slab_fix_colors_record.json  preview_gm_mri_p3_rt_slab_fix_colors_preview_only.json  preview_gm_mri_p6_rt_slab_fix_colors_preview_only.json  preview_sa_mri_p6_muscle_interior_debug.json  preview_sa_mri_p6_pruned_muscle_back_interior_debug.json  record_sa_mri_p4_pruned_muscle_back_softer_20260319_231531.json  record_sa_mri_p6_muscle_interior_debug.json  record_sa_mri_p6_muscle_posterior_union_interior_debug.json  record_sa_mri_p6_muscle_posterior_union_interior_debug_longer.json  record_sa_mri_p6_pruned_muscle_back_soft_20260319_215008.json  (+1 more)
physx_direct/: .gitignore  CMakeLists.txt  README.md
physx_direct/app/: main.cpp
physx_direct/patches/: physx_cuda12_5_arch89.diff
physx_direct/presets/: live_view_gm_mri_reference.cmd  live_view_gm_mri_reference_self_collision.cmd  run_and_render_gm_mri_reference.cmd  run_gm_mri_reference.cmd  run_sa_mri_reference.cmd  view_gm_mri_reference.cmd
physx_direct/tools/: export_physx_bundle.py  live_view_physx.py  render_physx_dump.py  view_physx_dump.py
sim/: bone_to_anchor_volume.py  (+7 more)
(+25 files in other folders)
